add discover collections

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -13,6 +13,11 @@
 				</figure>
 				<ul class="am-Header-menu">
 					<li class="am-Header-menu-item">
+						<a class="am-Header-text desktop" href="/collections/category/all/page-1?order=popularity">
+							<p>COLECCIONES</p><i class="fa fa-heart-o"></i>
+						</a>
+					</li>
+					<li class="am-Header-menu-item">
 						<a class="am-Header-text desktop" href="/users/specialty/all/page-1?order=popularity">
 							<p>ARTISTAS</p><i class="fa fa-heart-o"></i>
 						</a>
