--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -3,9 +3,19 @@
 {% set path = 'market' %}
 {% set profile = profile.toJSON()%}
 {% block elements %}
-	<div class="am-Profile-banner" style="background-image: url('http://www.wallpapereast.com/static/images/Dragon-Backgrounds-Wallpaper-Hd-44.jpg')">
 		{% if owner %}
-			<i class="fa fa-pencil-square-o"></i>
+			<div class="uploader-cover">
+				<i class="fa fa-pencil-square-o"></i>
+				<div class="profile-imgage">
+					<div class="preview">
+						<img src="http://www.wallpapereast.com/static/images/Dragon-Backgrounds-Wallpaper-Hd-44.jpg"/>
+					</div>
+				</div>
+				<div class="preload hide"><i class="fa fa-spinner"></i></div>
+			</div>
+			<div class="image-uploader" style="position:relative;">
+				{{cloudinary.uploader.image_upload_tag('photo', { callback: cloudinary_cors, return_delete_token: true})}}
+			</div>
 		{% endif %}
 		<div class="grid-container">
 			<div class="grid-100">
@@ -106,8 +116,23 @@
 {% endblock %}
 
 {% block scripts %}
+<script src='/jquery.ui.widget.js' type='text/javascript'></script>
+<script src='/jquery.iframe-transport.js' type='text/javascript'></script>
+<script src='/jquery.fileupload.js' type='text/javascript'></script>
+<script src='/jquery.cloudinary.js' type='text/javascript'></script>
 	<script>
 		$(document).ready(function() {
+			var owner = {{owner|json|safe}};
+
+			if(owner) {
+				var config = {
+					"api_key": "337494525976864",
+					"cloud_name": "hackdudes",
+					"private_cdn": false
+				};
+				$.cloudinary.config(config);
+				var uploaderImage = new APP.UploaderImage($('.uploader-cover'));
+			}
 			var profile = {{profile|json|safe}};
 			var following = profile.following;
 			$('.am-Follow-button').click(function(event){
