refactor work-product

--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -77,7 +77,6 @@
 						</div>
 						<div class="body u-text-center">
 							<p class="title large">Puedes preguntar al artista la disponibilidad</p>
-							<!-- <p class="price u-padding-top-10">S/. <strong class="large">1500</strong></p> -->
 							<button class="am-View-button expand u-margin-top-20">PREGUNTAR PRECIO</button>
 							<p class="msg u-padding-top-15 u-padding-bottom-4">Muy pronto la tienda en línea</p>
 						</div>
@@ -105,296 +104,17 @@
 		</div>
 	</div>
 
-
-	<!-- ********************************************************************
-		$ SINGLE MENU
-	********************************************************************* -->
-	<div class="am-SingleMenu u-margin-top-20">
-		<div class="grid-container">
-			<div class="grid-100">
-				<div class="single-menu">
-					<div class="artist">
-						<div class="FollowArtist">
-							<a href="/user/{{work.User.username}}">
-								<img src="{{work.User.photo}}">
-							</a>
-							<div>
-								<p class="u-padding-bottom-4 uppercase" style="font-weight: bold;">{{work.User.firstname}}</p>
-								<p class="u-padding-bottom-7"> <strong></strong> {{work.User.city}}, {{work.User.country}}</p>
-								{% if !owner %}
-								<button class="am-Follow-button">+ SEGUIR</button>
-								{% endif %}
-							</div>
-						</div>
-					</div>
-					<div class="menu">
-						<div class="carousel">
-							<div class="single-tabs">
-								<div class="single-tab index">
-									<p>+ OBRAS</p>
-									<!-- <i class="fa fa-cube"></i> -->
-									<i class="bi_misc-cube"></i>
-								</div>
-								<div class="single-tab reviews">
-									<p>REVIEWS</p>
-									<span>{{reviews.length}}</span>
-								</div>
-								<div class="single-tab tags">
-									<p>TAGS</p>
-									<!-- <i class="fa fa-align-left"></i> -->
-									<i class="bi_editorial-left-align"></i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="grid-container reviews-container {% if currentPath !== 'reviews' %} hide {% endif %}">
-		<div class="grid-100">
-			<div class="reviews">
-				<p class="title">Reviews &nbsp;&nbsp;<span>{{reviews.length}}</span></p>
-				<div class='reviews-items-container'>
-				</div>
-				<div class="review">
-					{% if user %}
-						<div class="avatar"><img src="{{user.photo}}"></div>
-						<form class="content review-form">
-							<input type="hidden" name='idWork' value="{{work.id}}"/>
-							<textarea class='value-input' name="value"></textarea>
-							<button>ADD COMMENT</button>
-						</form>
-					{% else %}
-						<a href="/auth/login">Logeate, para agregar review</a>
-					{% endif %}
-				</div>
-			</div>
-		</div>
-	</div>
-		<div class="grid-container tags-container {% if currentPath !== 'tags' %} hide {% endif %}">
-			<div class="grid-100">
-				<div class="tags-container">
-					<p class="title">Tags&nbsp;&nbsp;<span>{{tags.length}}</span></p>
-					<div class="u-separator"></div>
-					<div class="tags">
-						{% for tag in tags %}
-						{% set url = "#" + tag.name %}
-						<div class="tag uppercase"><a href='/works/category/all/page-1/?term={{url|url_encode}}'>{{tag.name}}</a></div>
-						{% endfor %}
-					</div>
-				</div>
-			</div>
-		</div>
-
-
-	<div class="index-container {% if currentPath !== 'index' %} hide {% endif %}">
-		<div class="grid-container u-margin-top-60">
-			<div class="grid-100">
-				<p class="am-more-text u-text-center u-padding-bottom-10">Otras obras del artista</p>
-				<div class="u-separator-center"></div>
-			</div>
-		</div>
-
-		<div class="grid-container">
-			<div class="grid-100">
-				<div class="more-carousel">
-					<div class="more-images more">
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="u-separator u-margin-top-60"></div>
-
-		<div class="grid-container u-margin-top-60">
-			<div class="grid-100">
-				<p class="am-more-text u-text-center u-padding-bottom-10">Obras relacionadas</p>
-				<div class="u-separator-center"></div>
-			</div>
-		</div>
-
-		<div class="grid-container">
-			<div class="grid-100">
-				<div class="more-carousel">
-					<div class="more-images similar">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+{% include '../../partials/single-work-product.html' %}
 {% include '../../partials/report.html' %}
-
 {% endblock %}
-
 {% block scripts %}
 	<script>
-	var owner = {{owner|json|safe}};
-	var work = {{work|json|safe}};
-
-	$(document).ready(function() {
-		$('.share-btn').on('click',function(){
-			$('.add-collection').hide();
-			$('.social-share').toggle();
-		});
-
-		var following = false;
-
-		if(DataApp.currentUser && !owner) {
-		var url = DataApp.currentUser.url + '/isFollowing';
-		$.post(url, {idUser:work.User.id}, function (response) {
-			if(response.status === 200) {
-				following = response.data.following;
-				if(response.data.following)
-					$('.am-Follow-button').addClass('following').text('-Siguiendo');
-			}
-		});
-
-		var url = DataApp.currentUser.url + '/collection/all';
-		$.post(url, {}, function (response) {
-			if(response.status === 200) {
-				var collections = response.data.collections;
-				var item = '<li class="collection" data-id="<%=id%>"><p><%=name%></p><i class="fa fa-check"></i></li>'
-				for(var i= 0; i <collections.length; i++) {
-					$('.collections').append($(_.template(item)(collections[i])));
-				}
-
-				var url = DataApp.currentUser.url + '/work/inside_collection';
-				$.post(url, {idWork: work.id}, function (response) {
-					var collections = response.data.collections;
-					for(var i= 0; i <collections.length; i++) {
-						var id = collections[i].id;
-						$('.collection[data-id='+id+']').addClass('selected');
-						collectionsClicked.push(id);
-					}
-				});
-			}
-		});
-	}
-
-		$('.collect-btn').on('click',function() {
-			$('.add-collection').toggle();
-			$('.social-share').hide();
-		});
-
-		var currentPath = {{currentPath|json|safe}};
-		var reviews = {{reviews|json|safe}};
-		console.log(reviews);
-
-		for (var i = 0; i <reviews.length; i++) {
-			$('.reviews-items-container').append(new APP.Review(reviews[i]).view);
-		}
-
-		new APP.Viewer('carrouselItem', $('.more'), null, {{more|json|safe}});
-		new APP.Viewer('carrouselItem', $('.similar'), null, {{similar|json|safe}});
-
-		$('.am-Follow-button').click(function(event){
-			if(following) {
-				var url = DataApp.currentUser.url + '/unfollow/';
-				$.post(url,{idUser: work.User.id}, function (response) {
-					if(response.status === 200) {
-						following = false;
-						$('.am-Follow-button').removeClass('following').text('+Seguir');
-					}
-				});
-			}else {
-				var url = DataApp.currentUser.url + '/follow/';
-				$.post(url,{idUser: work.User.id}, function (response) {
-					if(response.status === 200) {
-						following = true;
-						$('.am-Follow-button').addClass('following').text('-Siguiendo');
-					}
-				});
-			}
-		});
-
-		$('.add-collection-form').submit(function(event){
-			event.preventDefault();
-			var url = DataApp.currentUser.url + '/collection/create';
-			$.post(url, $(this).serialize(), function (response) {
-				if(response.status === 200) {
-					var item = '<li class="collection selected" data-id="<%=id%>"><p><%=name%></p><i class="fa fa-check"></i></li>'
-					var collection = response.data.collection;
-					collectionsClicked.push(collection.id);
-					$('.collections').append($(_.template(item)(collection)));
-				}
-			});
-		});
-
-		$('.like-btn').click(function(){
-			if(!work.liked) {
-				var url = DataApp.currentUser.url + '/work/like';
-				$.post(url, {idWork:work.id}, function (response) {
-					if(response.status === 200) {
-						work.liked = true;
-						$('.likes').text(response.data.likes)
-						$('.like-btn').parent().addClass('active');
-					}
-				});
-			}else {
-				var url = DataApp.currentUser.url + '/work/unlike';
-				$.post(url, {idWork:work.id}, function (response) {
-					work.liked = false;
-					$('.likes').text(response.data.likes)
-					if(response.status === 200) {
-						$('.like-btn').parent().removeClass('active');
-					}
-				});
-			}
-		});
-
-		$('.review-form').submit(function(event){
-			event.preventDefault();
-			var url = DataApp.currentUser.url + '/work/review/create';
-			$.post(url, $(this).serialize(), function (response) {
-				if(response.status === 200) {
-					$('.value-input').val('');
-					$('.reviews-items-container').append(new APP.Review(response.data.review).view);
-				}
-			});
-		});
-
-		var collectionsClicked = [];
-		$('.collections').on("click", ".collection", function() {
-			var id = parseInt($(this).data('id'),10);
-			var index = collectionsClicked.indexOf(id);
-			if(index === -1){
-					collectionsClicked.push(id);
-					$(this).addClass('selected');
-			}else {
-				collectionsClicked.splice(index, 1);
-				$(this).removeClass('selected');
-			}
-		});
-
-		$('.index').click(function() {
-			Utils.changeUrl('tags', '/user/' + work.User.username + '/work/' + work.nameSlugify);
-			$('.index-container').show();
-			$('.reviews-container').hide();
-			$('.tags-container').hide();
-		});
-
-		$('.reviews').click(function() {
-			Utils.changeUrl('tags', '/user/' + work.User.username + '/work/' + work.nameSlugify + '/reviews');
-			$('.index-container').hide();
-			$('.reviews-container').show();
-			$('.tags-container').hide();
-		});
-
-		$('.tags').click(function(){
-			Utils.changeUrl('tags', '/user/' + work.User.username + '/work/' + work.nameSlugify + '/tags');
-			$('.index-container').hide();
-			$('.reviews-container').hide();
-			$('.tags-container').show();
-		});
-
-		$('.save-collections').click(function() {
-			var url = DataApp.currentUser.url + '/work/add_to_collection';
-			$.post(url, {idWork: work.id, collections: JSON.stringify(collectionsClicked)}, function (response) {
-				console.log(response);
-			});
-		});
-	});
+		window.owner = {{owner|json|safe}};
+		window.work = {{work|json|safe}};
+		window.currentPath = {{currentPath|json|safe}};
+		window.reviews = {{reviews|json|safe}};
+		window.more = {{more|json|safe}};
+		window.similar = {{similar|json|safe}};
 	</script>
+	<script href='/work-product.js'></script>
 {% endblock %}
